# nova-wisper

./: .gitignore  LICENSE  Nova.spec  NovaDebug.spec  README.md  config.yaml  pyproject.toml
.github/workflows/: tests.yml
hooks/: rthook_ort.py
scripts/: build.py  download_model.py
src/wisper/: app.py  audio_capture.py  config.py  hotkey.py  injector.py  launcher.py  logging_setup.py  notes.py  orchestrator.py  transcriber.py  tray.py
src/wisper/overlay/: __init__.py  overlay.py
src/wisper/overlay/assets/: overlay.html
tests/: test_audio_capture.py  test_config.py  test_extract_commands.py  test_extract_json.py  test_injector.py  test_orchestrator.py  test_routing.py  test_transcriber.py
