[project]
name = "wisper"
version = "0.2.0"
description = "Local Windows voice dictation — push-to-talk speech-to-text"
requires-python = ">=3.11"
dependencies = [
    "sherpa-onnx>=1.10.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "keyboard>=0.13.5",
    "pynput>=1.7.6",
    "pystray>=0.19.5",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "sherpa-onnx-core>=1.13.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyinstaller>=6.0"]

[project.scripts]
nova = "wisper.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wisper"]
